<resources>
    <string name="app_name">Weather_forecast</string>
    <string name="weather_matters_nwe_ve_got_the_details" />
    <string name="_00_00_c">00:00 ºC</string>
    <string name="textview">TextView</string>
    <string name="_0000_hpa">0000 hPa</string>
    <string name="humidity">Humidity</string>
    <string name="_00_00">00:00</string>
    <string name="sea">Sea</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="condition">Condition</string>
    <string name="sunny">SUNNY</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_0_00_m_s">0.00 m/s</string>
    <string name="_11_april_2025">11 April 2025</string>
    <string name="tuesday">Tuesday</string>
    <string name="city_name">City Name</string>
    <string name="max_00_00_c">Max: 00:00ºC</string>
</resources>
