<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_background"
    tools:context=".MainActivity">



    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_marginTop="55dp"
        android:background="@drawable/searchviewshape"
        android:iconifiedByDefault="false"
        android:queryHint="Search for a city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawablePadding="12dp"
        android:fontFamily="@font/merriweathersans_medium"
        android:text="Phagwara"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/loctaion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityName"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun" />





    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/merriweathersans_semibold"
        android:text="@string/_00_00_c"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="SUNNY"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/lottieAnimationView"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimationView" />

    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="Max: 00:00ºC"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView4" />

    <TextView
        android:id="@+id/minTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="Min: 00:00ºC"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maxTemp" />



    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:text="@string/tuesday"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/minTemp" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/merriweathersans_bold"
        android:text="Today"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lottieAnimationView"
        app:layout_constraintTop_toBottomOf="@id/cityName" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/merriweathersans_regular"
        android:text="@string/_11_april_2025"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/day" />

    <FrameLayout
        android:id="@+id/forecastFrame"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:background="@drawable/backgroundshape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="16dp">


            <LinearLayout
                android:id="@+id/ll_wind"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:id="@+id/windspeedimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/wind" />

                <TextView
                    android:id="@+id/windspeedmeasurement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/_0_00_m_s"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/windspeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/wind_speed"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_condition"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ll_wind"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0">

                <ImageView
                    android:id="@+id/sunny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/conditions" />

                <TextView
                    android:id="@+id/sunnycheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/sunny"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/condition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/condition"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sunrise"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/sunriseimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sunrise" />

                <TextView
                    android:id="@+id/sunrisetime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="00:00"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center"
                    android:text="@string/sunrise"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sunset"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/ll_wind"
                app:layout_constraintStart_toEndOf="@+id/ll_sunrise"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/sunsetimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/sunset" />

                <TextView
                    android:id="@+id/sunsettime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="00:00"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/sunset"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sea"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ll_wind"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_sunrise">

                <ImageView
                    android:id="@+id/seaimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/conditions" />

                <TextView
                    android:id="@+id/sealevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/_0000_hpa"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/sea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="@string/sea"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_humidity"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/backgroundshape"
                android:gravity="bottom|center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/ll_condition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/ll_sunset"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/humidityimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/humidity" />

                <TextView
                    android:id="@+id/humiditymeasure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="00:00 %"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweathersans_medium"
                    android:gravity="center|center_vertical"
                    android:text="Humidity"
                    android:textColor="@color/black"
                    android:textSize="10sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>